1) edited background images to include empty space for bigger screens (so background-size:contain will auto resize correctly for almost all sizes (800-975 width does not resize correctly (picture goes below orange banner))
2) Added 80px from the top so the bg picture doesn't run through the menu bar

3) Edited the beachstrap-styles.css so all sections/tags covering background sizing are the same (min height 500px, bg_size: contain, etc)

--- a/public/css/beachstrap-styles.css
+++ b/public/css/beachstrap-styles.css
@@ -133,12 +133,12 @@ nav a:hover, nav a.active {
 
 /* ====================== MAIN ========================= */
 #main {
-  background: url(../images/KERKNAZARENER.png) 0 0 no-repeat;/* fixed;*/
-  min-height: 600px;
+  background: url(../images/KERKNAZARENER_screen991up.png) no-repeat;/* fixed;*/
+  min-height: 500px;
   -webkit-background-size: contain;
   -moz-background-size: contain;
   background-size: contain;
-  background-position: center;
+  background-position: center 80px;
   /* Internet Explorer 7/8 */
   /*background-attachment: fixed; */}
 #main .cont-wrapper {
@@ -412,6 +412,9 @@ footer .sn-links a {
     /* 	line-height: 0; */ }
 
   #main {
+	background: url(../images/KERKNAZARENER_screen991down.png) no-repeat;
+	background-size: contain;
+    background-position: center 80px;
     min-height: 500px !important; }
   #main .cont-wrapper {
     top: 100px;}
@@ -462,9 +465,12 @@ footer .sn-links a {
     line-height: 26px; }
 
   #main {
+	background: url(../images/KERKNAZARENER_screen991down.png) no-repeat;
     background-attachment: scroll;
+	background-size: contain;
+    background-position: center 80px;
     /*background-position-x: -100px;*/
-    min-height: 600px; }
+    min-height: 500px; }
   #main .cont-wrapper {
     top: 110px; }
   #main p.intro {
